--- a/overview.html
+++ b/overview.html
@@ -64,8 +64,7 @@
 
         <h2>Hello Gigi! 😊</h2>
         <p>I’m reaching out because you’ve been gifted a custom profile. I specialize in creating personalized designs,
-            and I’d love to help you create a wonderful profile that reflects your personality and brings your vision to
-            life.</p>
+            and I’d love to help you create a wonderful profile that reflects your personality.</p>
 
         <p>To ensure your profile captures your style and preferences, I’ve taken a look at your current profile,
             photos, and albums. It seems like you enjoy pastel tones, especially pink, as well as adorable characters,
